fix bottom overflow

--- a/src/pages/my/$detail/components/detail/css/item.scss
+++ b/src/pages/my/$detail/components/detail/css/item.scss
@@ -1,4 +1,4 @@
-.list {
+.list:last-child {
     padding-bottom: 65px;
 }
 
